--- a/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
+++ b/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -141,12 +142,33 @@
       "outputs": [],
       "source": [
         "class LambdaLayer(nn.Module):\n",
+        "    \"\"\"\n",
+        "    This class defines a Lambda Layer. It allows to perform arbitrary operations specified by the \"lambd\" argument.\n",
+        "\n",
+        "    Attributes:\n",
+        "        lambd: a function that defines the operation to be performed on the input.\n",
+        "    \"\"\"\n",
         "    \n",
         "    def __init__(self, lambd):\n",
+        "        \"\"\"\n",
+        "        Init method for the Lambda Layer.\n",
+        "\n",
+        "        Args:\n",
+        "            lambd (function): Function that defines the operation to be performed on the input.\n",
+        "        \"\"\"\n",
         "        super(LambdaLayer, self).__init__()\n",
         "        self.lambd = lambd\n",
         "    \n",
         "    def forward(self, x):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the Lambda Layer. It applies the function to the input.\n",
+        "\n",
+        "        Args:\n",
+        "            x (torch.Tensor): Input tensor to the Lambda Layer.\n",
+        "\n",
+        "        Returns:\n",
+        "            torch.Tensor: The output of the Lambda Layer after applying the function.\n",
+        "        \"\"\"\n",
         "        return self.lambd(x)\n",
         "\n",
         "class BasicConvBlock(nn.Module):\n",
@@ -160,6 +182,15 @@
         "    '''\n",
         "    \n",
         "    def __init__(self, in_channels, out_channels, stride=1, option='A'):\n",
+        "        \"\"\"\n",
+        "        Init method for the Basic Convolution Block.\n",
+        "\n",
+        "        Args:\n",
+        "            in_channels (int): Number of channels in the input tensor.\n",
+        "            out_channels (int): Number of channels in the output tensor.\n",
+        "            stride (int, optional): Stride for the convolution operation. Default is 1.\n",
+        "            option (str, optional): Option for the shortcut connection to match dimensions. Default is 'A'.\n",
+        "        \"\"\"\n",
         "        super(BasicConvBlock, self).__init__()\n",
         "        \n",
         "        self.features = nn.Sequential(OrderedDict([\n",
@@ -198,6 +229,15 @@
         "                ]))\n",
         "        \n",
         "    def forward(self, x):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the Basic Convolution Block. It applies the sequence of layers and adds the shortcut connection.\n",
+        "\n",
+        "        Args:\n",
+        "            x (torch.Tensor): Input tensor to the Basic Convolution Block.\n",
+        "\n",
+        "        Returns:\n",
+        "            torch.Tensor: The output of the Basic Convolution Block.\n",
+        "        \"\"\"\n",
         "        out = self.features(x)\n",
         "        # sum it up with shortcut layer\n",
         "        out += self.shortcut(x)\n",
@@ -206,6 +246,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -325,6 +366,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -561,6 +603,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "QjPLm6BENFbq"
@@ -638,6 +681,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tOv_8vpcNFbt"
@@ -823,6 +867,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "AODk608HNFbv"
