--- a/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
+++ b/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
@@ -318,9 +318,21 @@
       "source": [
         "\n",
         "class ResNet(nn.Module):\n",
-        "    \"\"\"\n",
-        "        ResNet-56 architecture for CIFAR-10 Dataset of shape 32*32*3\n",
-        "    \"\"\"\n",
+        "    \"\"\" ResNet-56 architecture for CIFAR-10 Dataset of shape 32*32*3.\n",
+        "    \n",
+        "    Args:\n",
+        "        block_type (nn.Module): The type of residual block to use.\n",
+        "        num_blocks (list): List containing the number of blocks for each layer.\n",
+        "    \n",
+        "    Attributes:\n",
+        "        in_channels (int): Number of input channels.\n",
+        "        conv0 (nn.Conv2d): Initial convolutional layer.\n",
+        "        bn0 (nn.BatchNorm2d): Batch normalization layer.\n",
+        "        block1 (nn.Sequential): First block layer.\n",
+        "        block2 (nn.Sequential): Second block layer.\n",
+        "        block3 (nn.Sequential): Third block layer.\n",
+        "        avgpool (nn.AdaptiveAvgPool2d): Adaptive average pooling layer.\n",
+        "        linear (nn.Linear): Linear layer for classification. \"\"\"\n",
         "    def __init__(self, block_type, num_blocks):\n",
         "        super(ResNet, self).__init__()\n",
         "        \n",
@@ -339,6 +351,18 @@
         "        self.linear = nn.Linear(64, 10)\n",
         "    \n",
         "    def __build_layer(self, block_type, out_channels, num_blocks, starting_stride):\n",
+        "        \"\"\"\n",
+        "        Build a layer consisting of multiple residual blocks.\n",
+        "        \n",
+        "        Args:\n",
+        "            block_type (nn.Module): The type of residual block to use.\n",
+        "            out_channels (int): Number of output channels.\n",
+        "            num_blocks (int): Number of blocks in the layer.\n",
+        "            starting_stride (int): Stride value for the first block.\n",
+        "        \n",
+        "        Returns:\n",
+        "            nn.Sequential: Sequential container of the residual blocks.\n",
+        "        \"\"\"\n",
         "        \n",
         "        strides_list_for_current_block = [starting_stride] + [1]*(num_blocks-1)\n",
         "        ''' Above line will generate an array whose first element is starting_stride\n",
@@ -355,6 +379,15 @@
         "        return nn.Sequential(*layers)\n",
         "    \n",
         "    def forward(self, x):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the ResNet model.\n",
+        "        \n",
+        "        Args:\n",
+        "            x (torch.Tensor): Input tensor.\n",
+        "        \n",
+        "        Returns:\n",
+        "            torch.Tensor: Output tensor.\n",
+        "        \"\"\"\n",
         "        out = F.relu(self.bn0(self.conv0(x)))\n",
         "        out = self.block1(out)\n",
         "        out = self.block2(out)        \n",
