--- a/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
+++ b/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
@@ -654,6 +654,14 @@
       "outputs": [],
       "source": [
         "def dataloader_cifar():\n",
+        "    \"\"\"\n",
+        "    Create dataloaders for the CIFAR-10 dataset.\n",
+        "    \n",
+        "    Returns:\n",
+        "        train_loader (torch.utils.data.DataLoader): Dataloader for the training set.\n",
+        "        val_loader (torch.utils.data.DataLoader): Dataloader for the validation set.\n",
+        "        test_loader (torch.utils.data.DataLoader): Dataloader for the test set.\n",
+        "    \"\"\"\n",
         "    transform = transforms.Compose([transforms.ToTensor(),\n",
         "                                    transforms.Normalize(mean=[0.5], std=[0.5])])\n",
         "            \n",
