--- a/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
+++ b/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -8,6 +9,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -155,6 +157,14 @@
         "from PIL import Image\n",
         "\n",
         "class ImageDataset(Dataset):\n",
+        "    \"\"\"\n",
+        "    Custom dataset class for loading and processing images for the BiCycleGAN project.\n",
+        "    \n",
+        "    Args:\n",
+        "        root (str): Root directory containing the image files.\n",
+        "        transforms_ (list): List of torchvision.transforms to apply to the images.\n",
+        "        mode (str): Dataset mode, either \"train\" or \"test\".\n",
+        "    \"\"\"\n",
         "    def __init__(self, root, transforms_=None, mode=\"train\"):\n",
         "        self.transform = transforms.Compose(transforms_)\n",
         "\n",
@@ -165,6 +175,15 @@
         "            # `extends()` method adds the specified list elements to the end of the current list.\n",
         "\n",
         "    def __getitem__(self, index):\n",
+        "        \"\"\"\n",
+        "        Get an item from the dataset.\n",
+        "        \n",
+        "        Args:\n",
+        "            index (int): Index of the item to retrieve.\n",
+        "        \n",
+        "        Returns:\n",
+        "            dict: Dictionary containing the transformed images.\n",
+        "        \"\"\"\n",
         "\n",
         "        img = Image.open(self.files[index % len(self.files)])\n",
         "        ''' In above line, my target is to find index item in a list based on the length of a variable in the list\n",
@@ -194,10 +213,17 @@
         "        return {\"A\": img_A, \"B\": img_B}\n",
         "\n",
         "    def __len__(self):\n",
+        "        \"\"\"\n",
+        "        Get the length of the dataset.\n",
+        "        \n",
+        "        Returns:\n",
+        "            int: Length of the dataset.\n",
+        "        \"\"\"\n",
         "        return len(self.files)"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -217,6 +243,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -259,6 +286,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -341,6 +369,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -702,6 +731,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -726,6 +756,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -774,6 +805,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -782,6 +814,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
