--- a/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
+++ b/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
@@ -65,6 +65,11 @@
         "import torch.nn.functional as F\n",
         "import torch\n",
         "\n",
+        "import glob\n",
+        "import random\n",
+        "from torch.utils.data import Dataset\n",
+        "from PIL import Image\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "from matplotlib.pyplot import figure\n",
         "from IPython.display import clear_output\n",
@@ -150,12 +155,6 @@
       },
       "outputs": [],
       "source": [
-        "import glob\n",
-        "import random\n",
-        "import os\n",
-        "from torch.utils.data import Dataset\n",
-        "from PIL import Image\n",
-        "\n",
         "class ImageDataset(Dataset):\n",
         "    \"\"\"\n",
         "    Custom dataset class for loading and processing images for the BiCycleGAN project.\n",
@@ -268,21 +267,33 @@
       "outputs": [],
       "source": [
         "#  IMAGE VISUALIZER HELPERS\n",
-        "def imshow(img,size=10):\n",
-        "  img = img / 2 + 0.5  # de-normalizing\n",
-        "  npimg = img.numpy()\n",
-        "  plt.figure(figsize=(size, size))\n",
-        "  plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
-        "  plt.show()\n",
+        "def imshow(img, size=10):\n",
+        "    \"\"\"\n",
+        "    Display an image using matplotlib.\n",
         "\n",
-        "\n",
-        "import matplotlib.image as mpimg\n",
+        "    Args:\n",
+        "        img (torch.Tensor): Input image tensor.\n",
+        "        size (int, optional): Size of the displayed figure. Defaults to 10.\n",
+        "    \"\"\"\n",
+        "    img = img / 2 + 0.5  # de-normalizing\n",
+        "    npimg = img.numpy()\n",
+        "    plt.figure(figsize=(size, size))\n",
+        "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
+        "    plt.show()\n",
         "\n",
         "def visualise_output(path, x, y):\n",
+        "    \"\"\"\n",
+        "    Load and display an image using matplotlib.\n",
+        "\n",
+        "    Args:\n",
+        "        path (str): Path to the image file.\n",
+        "        x (int): Width of the displayed figure.\n",
+        "        y (int): Height of the displayed figure.\n",
+        "    \"\"\"\n",
         "    img = mpimg.imread(path)\n",
-        "    plt.figure(figsize=(x,y))\n",
-        "    plt.imshow(img)  \n",
-        "    plt.show()"
+        "    plt.figure(figsize=(x, y))\n",
+        "    plt.imshow(img)\n",
+        "    plt.show()\n"
       ]
     },
     {
@@ -401,12 +412,25 @@
         "# Initialize convolution layer weights to N(0,0.02)\n",
         "########################################################\n",
         "def weights_init_normal(m):\n",
+        "    \"\"\"\n",
+        "    Initialize the weights of a convolutional layer using a normal distribution.\n",
+        "\n",
+        "    Args:\n",
+        "        m (torch.nn.Module): The module to initialize the weights for.\n",
+        "    \"\"\"\n",
         "    classname = m.__class__.__name__\n",
+        "    \n",
         "    if classname.find(\"Conv\") != -1:\n",
+        "        # Initialize the convolutional layer weights with a normal distribution (mean=0, std=0.02)\n",
         "        torch.nn.init.normal_(m.weight.data, 0.0, 0.02)\n",
+        "    \n",
         "    elif classname.find(\"BatchNorm2d\") != -1:\n",
+        "        # Initialize the weights of the batch normalization layer with a normal distribution (mean=1, std=0.02)\n",
         "        torch.nn.init.normal_(m.weight.data, 1.0, 0.02)\n",
+        "        \n",
+        "        # Initialize the biases of the batch normalization layer with zeros\n",
         "        torch.nn.init.constant_(m.bias.data, 0.0)\n",
+        "\n",
         "\n",
         "\n",
         "##############################\n",
