--- a/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
+++ b/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
@@ -442,6 +442,18 @@
         "'''\n",
         "\n",
         "class UNetDown(nn.Module):\n",
+        "    \"\"\"  Implements the downsampling layer of a U-Net architecture.\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    in_size : int\n",
+        "        The number of input channels.\n",
+        "    out_size : int\n",
+        "        The number of output channels.\n",
+        "    normalize : bool, optional\n",
+        "        If True, performs batch normalization.\n",
+        "    dropout : float, optional\n",
+        "        Dropout rate. \"\"\"\n",
         "    def __init__(self, in_size, out_size, normalize=True, dropout=0.0):\n",
         "        super(UNetDown, self).__init__()\n",
         "        layers = [nn.Conv2d(in_size, out_size, 3, stride=2, padding=1, bias=False)]\n",
@@ -455,6 +467,16 @@
         "\n",
         "''' In the decoder, the size of the image gradually increases and the depth gradually decreases. '''\n",
         "class UNetUp(nn.Module):\n",
+        "    \"\"\"\n",
+        "    Implements the upsampling layer of a U-Net architecture.\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    in_size : int\n",
+        "        The number of input channels.\n",
+        "    out_size : int\n",
+        "        The number of output channels.\n",
+        "    \"\"\"\n",
         "    def __init__(self, in_size, out_size):\n",
         "        super(UNetUp, self).__init__()\n",
         "        self.model = nn.Sequential(\n",
@@ -471,6 +493,16 @@
         "\n",
         "\n",
         "class Generator(nn.Module):\n",
+        "    \"\"\"\n",
+        "    Implements the Generator class for a U-Net-based Generator.\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    latent_dim : int\n",
+        "        The dimensionality of the latent space.\n",
+        "    img_shape : tuple\n",
+        "        The dimensions of the input image. Should be in the format (channels, height, width).\n",
+        "    \"\"\"\n",
         "    def __init__(self, latent_dim, img_shape):\n",
         "        super(Generator, self).__init__()\n",
         "        channels, self.h, self.w = img_shape\n",
@@ -521,6 +553,13 @@
         "##############################\n",
         "\n",
         "class Encoder(nn.Module):\n",
+        "    \"\"\"\n",
+        "        Encoder module used in BiCycleGAN project.\n",
+        "        \n",
+        "        Args:\n",
+        "            latent_dim (int): Dimensionality of the latent space.\n",
+        "            input_shape (tuple): Shape of the input image (channels, height, width).\n",
+        "        \"\"\"\n",
         "    # 1. Use this encoder and get mu and log_var\n",
         "    # 2. std = exp(log_var / 2)\n",
         "    # 3. random_z = N(0, 1)\n",
@@ -537,6 +576,15 @@
         "        self.fc_logvar = nn.Linear(256, latent_dim)\n",
         "\n",
         "    def forward(self, img):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the encoder.\n",
+        "        \n",
+        "        Args:\n",
+        "            img (torch.Tensor): Input image tensor (batch_size, channels, height, width).\n",
+        "        \n",
+        "        Returns:\n",
+        "            tuple: A tuple containing the mu and log(var) tensors.\n",
+        "        \"\"\"\n",
         "        out = self.feature_extractor(img)\n",
         "        out = self.pooling(out)\n",
         "        out = out.view(out.size(0), -1)\n",
@@ -551,6 +599,12 @@
         "\n",
         "class MultiDiscriminator(nn.Module):\n",
         "    def __init__(self, input_shape):\n",
+        "        \"\"\"\n",
+        "        MultiDiscriminator module used in the BiCycleGAN project.\n",
+        "        \n",
+        "        Args:\n",
+        "            input_shape (tuple): Shape of the input image (channels, height, width).\n",
+        "        \"\"\"\n",
         "        super(MultiDiscriminator, self).__init__()\n",
         "\n",
         "        def discriminator_block(in_filters, out_filters, normalize=True):\n",
@@ -579,11 +633,29 @@
         "        self.downsample = nn.AvgPool2d(channels, stride=2, padding=[1, 1], count_include_pad=False)\n",
         "\n",
         "    def compute_loss(self, x, ground_truth):\n",
-        "        \"\"\"Computes the MSE between model output and scalar ground_truth\"\"\"\n",
+        "        \"\"\"\n",
+        "        Computes the mean squared error (MSE) loss between model output and ground truth.\n",
+        "        \n",
+        "        Args:\n",
+        "            x (torch.Tensor): Input tensor (batch_size, channels, height, width).\n",
+        "            ground_truth (torch.Tensor): Ground truth scalar value (batch_size).\n",
+        "        \n",
+        "        Returns:\n",
+        "            torch.Tensor: The computed loss.\n",
+        "        \"\"\"\n",
         "        loss = sum([torch.mean((out - ground_truth) ** 2) for out in self.forward(x)])\n",
         "        return loss\n",
         "\n",
         "    def forward(self, x):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the MultiDiscriminator.\n",
+        "        \n",
+        "        Args:\n",
+        "            x (torch.Tensor): Input tensor (batch_size, channels, height, width).\n",
+        "        \n",
+        "        Returns:\n",
+        "            list: A list of discriminator outputs at different scales.\n",
+        "        \"\"\"\n",
         "        outputs = []\n",
         "        for m in self.models:\n",
         "            outputs.append(m(x))\n",
