--- a/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
+++ b/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
@@ -894,6 +894,16 @@
         "'''\n",
         "\n",
         "def reparameterization(z_mean, z_log_var):\n",
+        "    \"\"\"\n",
+        "    Reparameterization trick used in the BiCycleGAN project.\n",
+        "    \n",
+        "    Args:\n",
+        "        z_mean (torch.Tensor): Mean of the latent space (batch_size, latent_dim).\n",
+        "        z_log_var (torch.Tensor): Log variance of the latent space (batch_size, latent_dim).\n",
+        "    \n",
+        "    Returns:\n",
+        "        torch.Tensor: Sampled latent vectors using the reparameterization trick (batch_size, latent_dim).\n",
+        "    \"\"\"\n",
         "    std = torch.exp(z_log_var / 2)\n",
         "    sampled_z = Variable(Tensor(np.random.normal(0, 1, (z_mean.size(0), hp.latent_dim))))\n",
         "    z = z_mean + sampled_z * std\n",
