--- a/Computer_Vision/Hausdorff_Distance.ipynb
+++ b/Computer_Vision/Hausdorff_Distance.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,6 +106,16 @@
     "@numba.jit(nopython=True, fastmath=True)\n",
     "\n",
     "def custom_dist(array_x, array_y):\n",
+    "    \"\"\"\n",
+    "    Custom distance function used in the BiCycleGAN project.\n",
+    "    \n",
+    "    Args:\n",
+    "        array_x (numpy.ndarray): Input array X.\n",
+    "        array_y (numpy.ndarray): Input array Y.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: Custom distance between array_x and array_y.\n",
+    "    \"\"\"\n",
     "    n = array_x.shape[0]\n",
     "    ret = 0.\n",
     "    for i in range(n):\n",
@@ -132,6 +143,16 @@
     "@numba.jit(nopython=True, fastmath=True)\n",
     "\n",
     "def custom_dist(array_x, array_y):\n",
+    "    \"\"\"\n",
+    "    Custom distance function used in the BiCycleGAN project.\n",
+    "    \n",
+    "    Args:\n",
+    "        array_x (numpy.ndarray): Input array X.\n",
+    "        array_y (numpy.ndarray): Input array Y.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: Custom distance between array_x and array_y.\n",
+    "    \"\"\"\n",
     "    n = array_x.shape[0]\n",
     "    ret = 0.\n",
     "    for i in range(n):\n",
@@ -142,6 +163,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This custom formula incorporates cubic differences between corresponding elements and normalization terms based on the squares of the elements.\n",
+    "\n",
+    "The @numba.jit decorator is used to compile the function using the Numba library, which provides just-in-time (JIT) compilation for improved performance. The nopython=True option ensures that the function is compiled to optimized machine code, and fastmath=True allows the compiler to use faster, less accurate math operations."
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -225,6 +257,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -301,6 +334,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
