--- a/Computer_Vision/Hausdorff_Distance.ipynb
+++ b/Computer_Vision/Hausdorff_Distance.ipynb
@@ -197,6 +197,17 @@
    "outputs": [],
    "source": [
     "def calculate_hausdorff_scipy(pred, gt, max_dist):\n",
+    "     \"\"\"\n",
+    "    Calculates the Hausdorff distance using the SciPy library.\n",
+    "    \n",
+    "    Args:\n",
+    "        pred (numpy.ndarray): Predicted binary mask.\n",
+    "        gt (numpy.ndarray): Ground truth binary mask.\n",
+    "        max_dist (float): Maximum distance threshold.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: Hausdorff distance normalized by the maximum distance.\n",
+    "    \"\"\"\n",
     "    if np.all(pred == gt):\n",
     "        return 0.0\n",
     "    dist = directed_hausdorff(np.argwhere(pred), np.argwhere(gt))[0]\n",
@@ -214,6 +225,17 @@
    "outputs": [],
    "source": [
     "def calculate_hausdorff_monai(pred, gt, max_dist):\n",
+    "    \"\"\"\n",
+    "    Calculates the Hausdorff distance using the MONAI library.\n",
+    "    \n",
+    "    Args:\n",
+    "        pred (numpy.ndarray): Predicted binary mask.\n",
+    "        gt (numpy.ndarray): Ground truth binary mask.\n",
+    "        max_dist (float): Maximum distance threshold.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: Hausdorff distance normalized by the maximum distance.\n",
+    "    \"\"\"\n",
     "    if np.all(pred == gt):\n",
     "        return 0.0\n",
     "    (edges_pred, edges_gt) = get_mask_edges(pred, gt)\n",
