--- a/Computer_Vision/Hausdorff_Distance.ipynb
+++ b/Computer_Vision/Hausdorff_Distance.ipynb
@@ -372,6 +372,16 @@
     "import torch\n",
     "\n",
     "def hausdorff_2d_torch(x, y):\n",
+    "    \"\"\"\n",
+    "    Calculates the Hausdorff distance between two 2D point sets using PyTorch.\n",
+    "    \n",
+    "    Args:\n",
+    "        x (torch.Tensor): Input tensor of shape (batch_size, num_points_x, 2).\n",
+    "        y (torch.Tensor): Input tensor of shape (batch_size, num_points_y, 2).\n",
+    "    \n",
+    "    Returns:\n",
+    "        torch.Tensor: The Hausdorff distance between the point sets of shape (batch_size,).\n",
+    "     \"\"\"\n",
     "    x = x.float()\n",
     "    y = y.float()\n",
     "    \n",
@@ -384,6 +394,16 @@
     "    value = torch.cat((value1, value2), dim=1)\n",
     "    \n",
     "    return value.max(1)[0]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this code, the hausdorff_2d_torch function calculates the Hausdorff distance between two sets of 2D points using PyTorch.\n",
+    "\n",
+    "Next, it computes the pairwise distances between all points in x and y using the torch.cdist function with p=2, which corresponds to the Euclidean distance."
    ]
   },
   {
