--- a/Computer_Vision/run_length_encoding.ipynb
+++ b/Computer_Vision/run_length_encoding.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,8 +30,18 @@
     "# https://www.kaggle.com/code/paulorzp/rle-functions-run-lenght-encode-decode/script\n",
     "def rle_encode(masked_image):\n",
     "    '''\n",
+    "    \"\"\"\n",
+    "    Run-length encoding of a masked image.\n",
+    "    \n",
+    "    Args:\n",
+    "        masked_image (numpy.ndarray): Masked image where 1 represents the object and 0 represents the background.\n",
+    "    \n",
+    "    Returns:\n",
+    "        str: Run length as string formated\n",
+    "    \"\"\"\n",
+    "    \n",
     "    img: numpy array, 1 - mask, 0 - background\n",
-    "    Returns run length as string formated\n",
+    "    \n",
     "    '''\n",
     "    pixels = masked_image.flatten()\n",
     "    # Now take an example image represented by the following array\n",
@@ -87,6 +98,22 @@
     "    # print(\"runs \", runs) # [ 7  2 11  2]\n",
     "    \n",
     "    return ' '.join(str(x) for x in runs)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function first flattens the masked image into a 1D array called pixels.\n",
+    "\n",
+    "Then, an extra 0 is added at the beginning and the end of the pixels array to avoid issues with '1' at the corners of the original image.\n",
+    "\n",
+    "The function finds the indices where the values of pixels change from 0 to 1 or from 1 to 0 using the np.where function. The resulting indices are stored in the runs array.\n",
+    "\n",
+    "To ensure that the indices point to the very first 1s or 0s, the function adjusts the indices by subtracting the values from the previous indices. This is done by subtracting runs[::2] from runs[1::2].\n",
+    "\n",
+    "Finally, the function converts the values in the runs array to strings and joins them with spaces using ' '.join() to obtain the run-length encoded representation of the masked image."
    ]
   },
   {
