--- a/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -1133,11 +1133,23 @@
    ],
    "source": [
     "def dataset_generator_lstm(dataset, look_back=5):\n",
+    "    \"\"\"\n",
+    "    Generates input-output pairs for an LSTM dataset.\n",
+    "    \n",
+    "    Args:\n",
+    "        dataset (numpy.ndarray): The dataset to generate input-output pairs from.\n",
+    "        look_back (int): The number of previous timesteps to use for prediction.\n",
+    "    \n",
+    "    Returns:\n",
+    "        numpy.ndarray: The input sequences.\n",
+    "        numpy.ndarray: The corresponding output values.\n",
+    "    \"\"\"\n",
     "    # A “lookback period” defines the window-size of how many\n",
     "    # previous timesteps are used in order to predict\n",
     "    # the subsequent timestep. \n",
     "    dataX, dataY = [], []\n",
     "    \n",
+    "    # Iterate over the dataset, considering a \"look_back\" window of previous timesteps\n",
     "    for i in range(len(dataset) - look_back):\n",
     "        window_size_x = dataset[i:(i + look_back), 0]\n",
     "        dataX.append(window_size_x)\n",
