--- a/Kaggle_Competition/Gravitational_Waves/EDA_CQT_Keras_Baseline.ipynb
+++ b/Kaggle_Competition/Gravitational_Waves/EDA_CQT_Keras_Baseline.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,6 +63,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -177,6 +179,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -344,6 +347,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -687,6 +691,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -931,6 +936,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -939,6 +945,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -962,6 +969,17 @@
     "# Defining a multi-plot function\n",
     "# And I am going to call the 3 series as Series-1, Series-2 and Series-3\n",
     "def multi_plot(series, plot_type, target):\n",
+    "    \"\"\"\n",
+    "    Plot multiple subplots based on the given series and plot type.\n",
+    "\n",
+    "    Args:\n",
+    "        series (list): List of series to plot.\n",
+    "        plot_type (str): Type of plot to generate ('box', 'kde', or 'time').\n",
+    "        target (str): Target label for the plot.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
     "    if plot_type == 'box' or plot_type == 'kde':\n",
     "      plt.figure(figsize=(20, 2))\n",
     "    else:\n",
@@ -1100,6 +1118,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1148,6 +1167,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1245,6 +1265,28 @@
     "\"\"\"\n",
     "\n",
     "class DataGenerator(Sequence):\n",
+    "    \"\"\"\n",
+    "    Custom data generator for loading and processing time-series data.\n",
+    "\n",
+    "    Args:\n",
+    "        path (str): Path to the data files.\n",
+    "        list_IDs (list): List of file IDs.\n",
+    "        data (pandas.DataFrame): DataFrame containing the data and labels.\n",
+    "        batch_size (int): Batch size for the generator.\n",
+    "\n",
+    "    Attributes:\n",
+    "        path (str): Path to the data files.\n",
+    "        list_IDs (list): List of file IDs.\n",
+    "        data (pandas.DataFrame): DataFrame containing the data and labels.\n",
+    "        batch_size (int): Batch size for the generator.\n",
+    "        indexes (numpy.ndarray): Array of indexes for shuffling the data.\n",
+    "\n",
+    "    Methods:\n",
+    "        __len__(): Returns the number of steps in an epoch.\n",
+    "        __getitem__(index): Generates a given batch of data.\n",
+    "        __data_generation(list_IDs_temp): Generates the data and labels for a batch.\n",
+    "\n",
+    "    \"\"\"\n",
     "\n",
     "    # For this dataset the list_IDs are the value of the ids\n",
     "    # for each of the time-series file\n",
@@ -1420,6 +1462,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
