--- a/Kaggle_Competition/Gravitational_Waves/EDA_CQT_Keras_Baseline.ipynb
+++ b/Kaggle_Competition/Gravitational_Waves/EDA_CQT_Keras_Baseline.ipynb
@@ -1296,6 +1296,16 @@
     "    # labels = pd.read_csv(root_dir + \"training_labels.csv\")\n",
     "    # and the argument \"data\" is that label here.\n",
     "    def __init__(self, path, list_IDs, data, batch_size):\n",
+    "        \"\"\"\n",
+    "        Initialize the data generator.\n",
+    "\n",
+    "        Args:\n",
+    "            path (str): Path to the data files.\n",
+    "            list_IDs (list): List of file IDs.\n",
+    "            data (pandas.DataFrame): DataFrame containing the data and labels.\n",
+    "            batch_size (int): Batch size for the generator.\n",
+    "\n",
+    "        \"\"\"\n",
     "        self.path = path\n",
     "        self.list_IDs = list_IDs\n",
     "        self.data = data\n",
@@ -1310,15 +1320,29 @@
     "    \"\"\"\n",
     "\n",
     "    def __len__(self):\n",
+    "        \"\"\"\n",
+    "        Returns the number of steps in an epoch.\n",
+    "\n",
+    "        Returns:\n",
+    "            int: Number of steps in an epoch.\n",
+    "\n",
+    "        \"\"\"\n",
     "        len_ = int(len(self.list_IDs)/self.batch_size)\n",
     "        if len_ * self.batch_size < len(self.list_IDs):\n",
     "            len_ += 1\n",
     "        return len_\n",
     "\n",
-    "    \"\"\"  __getitem__ method is called with the batch number as an argument to obtain a given batch of data.\n",
-    "\n",
-    "    \"\"\"\n",
     "    def __getitem__(self, index):\n",
+    "        \"\"\"\n",
+    "        __getitem__ method is called with the batch number as an argument to obtain a given batch of data.\n",
+    "\n",
+    "        Args:\n",
+    "            index (int): Index of the batch.\n",
+    "\n",
+    "        Returns:\n",
+    "            tuple: Tuple containing the input data and labels.\n",
+    "\n",
+    "        \"\"\"\n",
     "        # get the range to to feed to keras for each epoch\n",
     "        # incrementing by +1 the bath_size\n",
     "        indexes = self.indexes[index * self.batch_size : (index + 1) * self.batch_size]\n",
